<resources>

    <!--dialogs-->
    <string name="dialog_logout">Logout?</string>
    <string name="dialog_logout_question">Are you sure want to logout?</string>
    <string name="dialog_month">Month</string>
    <string name="dialog_select_month">Select a Month to search entries</string>
    <string name="dialog_enter_a_number">Enter a Number</string>
    <string name="dialog_last_entries"><![CDATA[Show most recent <number> entries]]></string>
    <string name="dialog_show_recent_entries">Show recent entries</string>
    <string name="dialog_clear_history">Clear history</string>
    <string name="dialog_clear_history_question">Clear entire history?</string>
    <string name="dialog_item_same_name">Item with same name found</string>
    <string name="dialog_item_update_question">This will overwrite the existing item</string>


    <!--menu-->
    <string name="menu_entries_this_month">Entries this Month</string>
    <string name="menu_search_by_month">Search by Month</string>
    <string name="menu_search_by_date">Search by Date</string>
    <string name="menu_last_x_entries">Last X Entries</string>
    <string name="menu_all_entries">All Entries</string>
    <string name="admin_menu">Admin Menu</string>

    <!--toasts-->
    <string name="toast_error_item">Error: please fill out all fields and check your connection</string>
    <string name="toast_item_added">Item Added!</string>
    <string name="toast_error_passwords_not_matching">Error: Passwords do not match!</string>
    <string name="toast_password_reset_link_sent">Password reset link has been sent. Please check your Email</string>
    <string name="toast_enter_all_login_info">Enter all your Login information</string>
    <string name="toast_enter_email">Enter your E-mail</string>
    <string name="toast_enter_password">Enter your Password</string>
    <string name="toast_welcome">Welcome</string>
    <string name="toast_error">Error</string>
    <string name="toast_item_updated">Item Updated</string>
    <string name="toast_item_already_exists">Item already exists!</string>
    <string name="toast_invalid_image_item_name">Invalid image or item name!</string>
    <string name="toast_item_image_deleted">Item and Image successfully deleted</string>

    <!--progress-->
    <string name="progress_logging_in">Logging in…</string>
    <string name="progress_registering">Registering…</string>
    <string name="progress_please_wait">Please wait, this may take a moment…</string>
    <string name="progress_sending_in_progress">Sending in progress…</string>
    <string name="progress_pushing_changes">Pushing changes…</string>

    <!--errors-->
    <string name="error_enter_email">Enter your E-mail</string>
    <string name="error_enter_password">Enter your Password</string>
    <string name="error_enter_repeat_password">Repeat your Password</string>

    <!--texts, buttons, titles-->
    <string name="app_name">Shop</string>
    <string name="user_info">User Information</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="submit">Submit</string>
    <string name="item_name">Item Name</string>
    <string name="item_description">Item Description</string>
    <string name="item_price">Item Price</string>
    <string name="title_update_item">Update Item</string>
    <string name="title_add_item">Add Item</string>
    <string name="price_format">0.0</string>
    <string name="date_format">YYYY-MM-DD HH:mm:SS</string>
    <string name="operation">Operation</string>
    <string name="added">Added</string>
    <string name="updated">Updated</string>
    <string name="deleted">Deleted</string>
    <string name="log_out">Log out</string>
    <string name="logged_in_as">Logged in as:</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="main">Main</string>
    <string name="store">Store</string>
    <string name="history">History</string>
    <string name="statistic">Statistic</string>
    <string name="support">Support</string>
    <string name="password_forgotten_click_here">Password forgotten? Click here!</string>
    <string name="send_password_reset_link">Send password reset link</string>
    <string name="reset_password">Password Reset Page</string>
    <string name="enter_email">Enter E-mail:</string>
    <string name="password_reset_explanation">The password reset link will be sent to the E-mail address you provided. Follow the E-mail instructions to reset your password.</string>
    <string name="cancel">Cancel</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="choose_image">Choose Image</string>
    <string name="prevent_accidental_overwrites">Prevent accidental overwrites?</string>
    <string name="upload_image">Upload Image</string>
    <string name="save_item">Save Item</string>
    <string name="rv_base_currency">EUR</string>
    <string name="dialog_select_currency">Select a Currency</string>
    <string name="available">Available:</string>
    <string name="rv_in_stock">In stock</string>
    <string name="rv_almost_gone">Almost gone</string>
    <string name="rv_sold_out">Sold out</string>
    <string name="items_left">Items remaining:</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="title">Title</string>
    <string name="total">Total:</string>
    <string name="snackbar_buy_now">Buy Now</string>
    <string name="to_payment_options">To Payment Options</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="dialog_descending">Descending</string>
    <string name="dialog_ascending">Ascending</string>
    <string name="dialog_sort_title">Order by</string>
    <string name="toast_items_added">Item(s) added!</string>
    <string name="paypal_total">Total:</string>
    <string name="toast_req_operation_failed">Requested operation failed!</string>
    <string name="toast_item_removed_cart">Item(s) removed from cart!</string>
    <string name="toast_id_copied_clipboard">Payment ID copied to clipboard</string>
    <string name="e_mail_hint">your.address@gmail.com</string>
    <string name="toast_please_upload_image">Please upload an image!</string>
    <string name="toast_check_internet">Please check your internet connection!</string>
    <string name="toast_connect_internet">Please connect to the internet!</string>
    <string name="toast_upload_complete">Upload complete!</string>
    <string name="items_currently_in_cart">items currently in cart</string>
    <string name="cart">Shopping cart</string>
    <string name="receipt">Receipts</string>
    <string name="price_total">Price total:</string>
    <string name="sold_items">Items Sold</string>
    <string name="toast_order_cancelled">Order Cancelled</string>
    <string name="toast_order_invalid">Order Invalid</string>

</resources>
