<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/admin_menu"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logged_in_as"
        app:layout_constraintBottom_toTopOf="@+id/btn_store"
        app:layout_constraintStart_toStartOf="@+id/btn_store"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tv_main_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/e_mail"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btn_store"
        style="@style/generalBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store"
        app:layout_constraintBottom_toTopOf="@+id/btn_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_history"
        style="@style/generalBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_statistic"
        style="@style/generalBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statistic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_history" />

    <Button
        android:id="@+id/btn_sold_items"
        style="@style/generalBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sold_items"
        app:layout_constraintTop_toBottomOf="@+id/btn_statistic" />

</androidx.constraintlayout.widget.ConstraintLayout>