<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_add_edit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/name"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/et_add_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/description"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/et_add_edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/price"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/et_add_edit_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/quantity"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/et_add_edit_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_add_edit_choose_image"
        style="@style/generalBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_image" />

    <ImageView
        android:id="@+id/iv_add_edit_image"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="@dimen/margin_add_edit_element" />


    <ProgressBar
        android:id="@+id/progress_bar_add_edit"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_add_edit_upload_image"
        style="@style/generalBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_add_edit_element"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/prevent_accidental_overwrites"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold|italic" />

        <CheckBox
            android:id="@+id/chk_add_edit_prevent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_add_edit_element"
            android:checked="true" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_add_edit_save"
        style="@style/generalBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/save_item" />


</LinearLayout>