<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/margin_store_item"
    android:layout_marginTop="@dimen/margin_store_item"
    android:layout_marginStart="@dimen/margin_store_item">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_store_item">

        <TextView
            android:id="@+id/tv_history_price"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_alignParentEnd="true"
            android:text="@string/price_format"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_history_date"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:text="@string/date_format"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_history_email" />

        <TextView
            android:id="@+id/tv_history_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:maxLines="1"
            android:text="@string/item_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toStartOf="@+id/tv_history_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_history_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_history_title" />

        <TextView
            android:id="@+id/tv_history_operation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/operation"
            app:layout_constraintEnd_toStartOf="@+id/tv_history_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_history_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>