<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_reset_layout">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textSize="@dimen/title_font_size"
        android:textStyle="bold"
        android:textColor="@color/colorItemTitle"
        app:layout_constraintBottom_toTopOf="@+id/et_reset_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_email"
        android:textColor="@color/colorItemTitle"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/et_reset_email"
        app:layout_constraintStart_toStartOf="@+id/et_reset_email" />

    <EditText
        android:id="@+id/et_reset_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_reset_layout_element"
        android:gravity="center_horizontal"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_corners"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_reset_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_reset_password"
        style="@style/generalBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_reset_layout_element"
        android:text="@string/send_password_reset_link"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_reset_email"
        app:layout_constraintStart_toStartOf="@+id/et_reset_email"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_reset_layout_element"
        android:gravity="center"
        android:text="@string/password_reset_explanation"
        android:textSize="16sp"
        android:textStyle="italic"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_reset_password" />

</androidx.constraintlayout.widget.ConstraintLayout>